--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Yu_Shiang Bien's Resume</title>
+        <title>Yu_Shiang Bien's misanthropic Resume</title>
         <link rel="icon" type="image/x-icon" href="static/assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
